--- a/deps.src/Makefile
+++ b/deps.src/Makefile
@@ -49,7 +49,7 @@ linux_ubuntu:
 	sudo apt-get install libsdl2-dev libsdl2-ttf-dev yasm \
 			libmp3lame-dev libopus-dev libogg-dev \
 			libvorbis-dev libtheora-dev \
-			libvpx-dev libx264-dev libxvidcore-dev
+			libvpx-dev libx264-dev libxvidcore-dev libssl-dev
 
 sdl2:
 	$(TGZUNPACK) $(SDL2)
